--- a/src/app/registro-empresa/registro-empresa.component.html
+++ b/src/app/registro-empresa/registro-empresa.component.html
@@ -1,41 +1,36 @@
 <div class="d-flex justify-content-center mt-4">
-  <form #empresaForm="ngForm" (ngSubmit)="onSubmit(empresaForm)" class="w-50">
-
+  <form (ngSubmit)="send()">
     <div class="mb-3">
-      <label for="nombre" class="form-label">Nombre:</label>
-      <input type="text" class="form-control" id="nombre" name="nombre" ngModel required>
+      <label for="nameCompany" class="form-label">Nombre:</label>
+      <input type="text"  [(ngModel)]="company.nameCompany"class="form-control" id="nameCompany" name="nameCompany" required>
     </div>
 
     <div class="mb-3">
       <label for="email" class="form-label">Email:</label>
-      <input type="email" class="form-control" id="email" name="email" ngModel required>
+      <input type="email"   [(ngModel)]="company.email"class="form-control" id="email" name="email"  required>
     </div>
 
     <div class="mb-3">
-      <label for="telefono" class="form-label">Telefono:</label>
-      <input type="number" class="form-control" id="telefono" name="telefono" ngModel required>
+      <label for="telephone" class="form-label">Telefono:</label>
+      <input type="text"  [(ngModel)]="company.telephone" class="form-control" id="telephone" name="telephone"  required>
     </div>
 
     <div class="mb-3">
-      <label for="pdf" class="form-label">Runt:</label>
-      <input type="file" class="form-control" id="pdf" name="pdf" ngModel required>
+      <label for="pdfRunt" class="form-label">Runt:</label>
+      <input type="file"  [(ngModel)]="company.pdfRunt" class="form-control" id="pdfRunt" name="pdfRunt"  required>
+    </div>
+
+
+    <div class="mb-3">
+      <label for="direction" class="form-label">Direccion:</label>
+      <input type="text" [(ngModel)]="company.direction"  class="form-control" id="direction" name="direction"  required>
     </div>
 
     <div class="mb-3">
-      <label for="firma" class="form-label">Firma:</label>
-      <input type="file" class="form-control" id="firma" name="firma" ngModel required>
+      <label for="tenantId" class="form-label">Nit:</label>
+      <input type="text"  [(ngModel)]="company.tenantId" class="form-control" id="tenantId" name="tenantId" ngModel required>
     </div>
 
-    <div class="mb-3">
-      <label for="direccion" class="form-label">Direccion:</label>
-      <input type="text" class="form-control" id="direccion" name="direccion" ngModel required>
-    </div>
-
-    <div class="mb-3">
-      <label for="nit" class="form-label">Nit:</label>
-      <input type="text" class="form-control" id="nit" name="nit" ngModel required>
-    </div>
-
-    <button type="submit" class="btn btn-primary" [disabled]="!empresaForm.valid">Enviar</button>
+    <button type="submit" class="btn btn-primary" >Enviar</button>
   </form>
 </div>
