--- a/src/app/registro-empleado/registro-empleado.component.html
+++ b/src/app/registro-empleado/registro-empleado.component.html
@@ -1,31 +1,53 @@
-<div class="d-flex justify-content-center mt-4">
-    <form (ngSubmit)="registerUser()">        <div class="mb-3">
-        <label for="nameCompany" class="form-label">Nombre:</label>
-        <input type="text"  [(ngModel)]="User.name"class="form-control" id="nameCompany" name="nameCompany" placeholder="Nombres y apellidos" required>
+<body>
+    <div class="d-flex justify-content-center align-items-center">
+     <h2> Registro de Usuario</h2>
+  </div>
+  <div class="d-flex justify-content-center mt-4 form-content" >
+    <form (ngSubmit)="registrar()" #form="ngForm">
+
+       
+      <div class="custom-select-large">
+        <label for="tenantId" class="form-label ">Empresas regisradas</label>
+        <select [(ngModel)]="selectedNit" class="form-control" id="tenantId" name="tenantId" required>
+          <option value="">Seleccione la empresa</option>
+          <option *ngFor="let nit of nits" [value]="nit">{{nit}}</option>
+        </select>
+      </div>
+
+      <div *ngIf="selectedNit">
+
+      <div class="mb-3">
+        <label for="nameUser" class="form-label">Nombre:</label>
+        <input type="text"  [(ngModel)]="User.username"class="form-control" id="nameUser" name="nameUser"  placeholder="Nombres y apellidos" required>
       </div>
   
       <div class="mb-3">
         <label for="email" class="form-label">Email:</label>
-        <input type="email"   [(ngModel)]="User.email"class="form-control" id="email" name="email" placeholder="correo electronico" required>
+        <input type="email"   [(ngModel)]="User.email"class="form-control" id="email" name="email" placeholder="correo " required>
       </div>
   
       <div class="mb-3">
         <label for="telephone" class="form-label">Telefono:</label>
-        <input type="text"  [(ngModel)]="User.telephone" class="form-control" id="telephone" name="telephone" placeholder="Telefono de contacto" required>
+        <input type="text"  [(ngModel)]="User.telephone" class="form-control" id="telephone" name="telephone"  placeholder="Telefono de contacto" required>
+      </div>
+  
+      <div class="mb-3">
+        <label for="imgfirme" class="form-label">firma:</label>
+        <input type="file"  [(ngModel)]="User.imgfirme" class="form-control" id="imgfirme" name="imgfirme"  required>
       </div>
   
   
       <div class="mb-3">
         <label for="direction" class="form-label">Direccion:</label>
-        <input type="text" [(ngModel)]="User.direction"  class="form-control" id="direction" name="direction" placeholder="direccion de residencia" required>
+        <input type="text" [(ngModel)]="User.direction"  class="form-control" id="direction" name="direction" placeholder="Dirección de residencia" required>
       </div>
   
-      <div class="mb-3">
-        <label for="tenantId" class="form-label">empresa:</label>
-        <input type="text"  [(ngModel)]="User.tenantId" class="form-control" id="tenantId" name="tenantId" ngModel required>
+      
       </div>
-  
-      <button type="submit" class="btn btn-primary" >Enviar</button>
-    </form>
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Enviar</button>
+    </div>
+      </form>
   </div>
   
+  </body>
