--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-navbar></app-navbar>  
+<div class="other-components">
+<app-layout></app-layout>
+<app-index></app-index>
 <router-outlet></router-outlet>
+
+</div>
 
