--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,2 +1,9 @@
-<a routerLink="/registrar/" routerLinkActive="active-link"  style="color:black;">Prueba </a>
-<!-- <a routerLink="/registroEmpresa/" routerLinkActive="active-link"  style="color:black;">Prueba12345678</a> -->
+<nav class="navbar">
+    <div class="contenedor-img">
+        <a href="#"><img src="../../assets/logo_little_box.png" alt=""></a>  
+    </div>
+<a routerLink="/SignIn/Up/" routerLinkActive="active-link"  class="right"> 
+    SignIn/Up
+    <img src="../../assets/bx-user-circle.svg" alt="Icono" class="icono"> 
+     </a>
+</nav>
