--- a/src/app/pre-registro/pre-registro.component.scss
+++ b/src/app/pre-registro/pre-registro.component.scss
@@ -19,24 +19,35 @@
   }
 
   .container {
-    width: 500px;
+    width: 400px;
     margin: 0 auto;
   }
-  
   .nav-tabs {
     justify-content: center;
+    font-size: 1rem; /* Puedes ajustar este valor según tus necesidades */
   }
   
   .nav-link {
-    font-size: 1.2rem;
+    font-size: 1rem; /* Puedes ajustar este valor según tus necesidades */
   }
   
   .tab-content {
     height: 500px;
   }
   
-  .tab-pane {
-    height: 100%;
+  .tab-pane.fade {
+    max-width: 300px; /* Puedes ajustar este valor según tus necesidades */
+    margin: 20px auto;
   }
+  .mb-3 {
+    max-width: 250px; /* Puedes ajustar este valor según tus necesidades */
+  }
+    
   
-  
+  h2.text-center {
+    font-size: 1.5rem; /* Puedes ajustar este valor según tus necesidades */
+  }
+  select {
+    font-size: 1rem; /* Puedes ajustar este valor según tus necesidades */
+  }
+    
