--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,7 +1,7 @@
 
 <body>
 
-<div class="overlay">
+<!-- <div class="container">
     <p>
       La caja menor es un fondo destinado a cubrir gastos menores y operativos de una organización,
       <br /> simplificando la gestión de pagos pequeños sin necesidad de procesos administrativos extensos.
@@ -10,5 +10,5 @@
       <br /> y responsabilidad en la rendición de cuentas, contribuyendo a una gestión
       <br /> eficiente de los recursos financieros.
     </p>
-  </div>
+  </div> -->
 </body>
