--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -1,32 +1,19 @@
-body {
-  background-image: url('../../assets/img1.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+body, html {
+    margin: 0;
+    padding: 0; 
+    background-image: url('../../assets/img1.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+    justify-content: center; /* Agregado */
+    align-items: center; /* Agregado */
 }
-
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-}
-
-.content {
-  z-index: 2;
-}
-
 
 p {
-  color: white;
+  color: rgb(18, 17, 17);
   font-size: 18px;
   position: absolute;
   top: 40%;
