--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -4,6 +4,27 @@ body {
     font-family: Arial, sans-serif;
 }
 
+
+  div {
+    display: flex;
+  }
+  .menu-container {
+    position: fixed;
+    top: 0;
+    left: -200px; /* Oculta el menú lateral por defecto */
+    width: 200px;
+    height: 100%;
+    background-color: #333;
+    transition: left 0.3s ease;
+    z-index: 1; /* Asegura que el menú esté por encima del contenido principal */
+  }
+  
+  .menu-open {
+    left: 0;
+  }
+  
+  
+
 .navbar {
     background-color: #063395;
     padding: 10px;
