--- a/src/app/pre-registro/pre-registro.component.scss
+++ b/src/app/pre-registro/pre-registro.component.scss
@@ -1,14 +1,11 @@
 /* pre-registro.component.scss o pre-registro.component.css */
-:host {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente para resaltar el diálogo */
+:host { 
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000; /* Fondo semitransparente para resaltar el diálogo */
   }
   
   .container {
@@ -50,4 +47,24 @@
   select {
     font-size: 1rem; /* Puedes ajustar este valor según tus necesidades */
   }
+
+  .menu-container {
+    position: fixed;
+    top: 0;
+    left: -200px; /* Oculta el menú lateral por defecto */
+    width: 200px;
+    height: 100%;
+    background-color: #333;
+    transition: left 0.3s ease;
+    z-index: 1; /* Asegura que el menú esté por encima del contenido principal */
+  }
+  
+  .menu-open {
+    left: 0;
+  }
+  
+  .toggle-menu-button {
+    cursor: pointer;
+  }
+  
     
