--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,13 +1,111 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
 }
 
 
-  div {
-    display: flex;
+div {
+  display: flex;
+}
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: -200px; /* Oculta el menú lateral por defecto */
+  width: 200px;
+  height: 100%;
+  background-color: #333;
+  transition: left 0.3s ease;
+  z-index: 1; /* Asegura que el menú esté por encima del contenido principal */
+}
+
+.menu-open {
+  left: 0;
+}
+
+
+
+.navbar {
+  background-color: #063395;
+  padding: 10px;
+  border-bottom: 3px solid #2980b9;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #ecf0f1;
+  font-weight: bold;
+}
+
+.navbar a:hover {
+  color: #ffffff;
+}
+
+/* Alinear elementos a la derecha */
+.navbar a.right {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
+
+.navbar a.right .icono {
+  width: 20px; /* Ajusta el tamaño según tus necesidades */
+  height: 20px; /* Ajusta el tamaño según tus necesidades */
+  margin-right: 5px; /* Espaciado entre la imagen y el texto */
+}
+/* Estilo adicional para el último elemento si es necesario */
+.navbar a.right:last-child {
+  margin-right: 10px; /* Agrega un margen derecho para separar del borde */
+}
+
+.contenedor-img{
+  width: 180px;
+  height: auto;
+  overflow: hidden;    
+}
+.contenedor-img a img{
+  width: 100%;
+  height: auto;
+}
+  /* Modal styles */
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 300vh; /* Ocupa toda la altura de la pantalla */
+    overflow: hidden; /* Elimina la barra de desplazamiento */
+    background-color: rgba(0, 0, 0, 0.5);
   }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 10% auto;
+    padding: 10px;
+    border: 1px solid #888;
+    width: 30%;
+    max-height: 80vh;
+    overflow-y: auto;
+  }
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  
+  
+  
+  
+ 
+  /* Active class to display the modal */
+  .modal.active {
+    display: block;
+  }
+  
   .menu-container {
     position: fixed;
     top: 0;
@@ -24,47 +122,3 @@ body {
   }
   
   
-
-.navbar {
-    background-color: #063395;
-    padding: 10px;
-    border-bottom: 3px solid #2980b9;
-}
-
-.navbar a {
-    text-decoration: none;
-    color: #ecf0f1;
-    font-weight: bold;
-}
-
-.navbar a:hover {
-    color: #ffffff;
-}
-
-/* Alinear elementos a la derecha */
-.navbar a.right {
-    margin-left: auto;
-    display: flex;
-    align-items: center;
-}
-
-
-.navbar a.right .icono {
-    width: 20px; /* Ajusta el tamaño según tus necesidades */
-    height: 20px; /* Ajusta el tamaño según tus necesidades */
-    margin-right: 5px; /* Espaciado entre la imagen y el texto */
-}
-/* Estilo adicional para el último elemento si es necesario */
-.navbar a.right:last-child {
-    margin-right: 10px; /* Agrega un margen derecho para separar del borde */
-}
-
-.contenedor-img{
-    width: 180px;
-    height: auto;
-    overflow: hidden;    
-}
-.contenedor-img a img{
-    width: 100%;
-    height: auto;
-}
